--- a/blog/读书笔记/V202306.md
+++ b/blog/读书笔记/V202306.md
@@ -46,7 +46,7 @@ This is a research paper on game and contract theory based power transaction man
 
 ## 004  Joint Offloading and Computing Optimization in Wireless Powered Mobile-Edge Computing Systems
 
-This article investigates the problem of joint offloading and computational optimization in wireless mobile edge computing systems. The article considers a wirelessly powered multi-user MEC system consisting of multiple antenna access points (APs) and multiple users, where the APs (integrated MEC servers) transmit energy via radio waves to charge multiple users, and each user node relies on the collected energy to perform latency-sensitive computational tasks. With MEC, these users can perform their respective tasks locally by themselves or offload all or some of them to the AP based on the Time Division Multiple Access (TDMA) protocol. in this case, we pursue an energy-efficient by jointly optimizing the AP's transmission energy beamformer, the central processing unit (CPU) frequency and offload bits for each user, and the time allocation among the different users MEC-WPT system design. Specifically, we minimize the energy consumption of the AP in a given time block under the computational delay and energy harvesting constraints for each user. By transforming this problem into a convex framework and using the Lagrangian dual method, we obtain its optimal solution in semi-closed form. Numerical results show that the proposed joint design outperforms other benchmark schemes in terms of achieving energy efficiency.
+In this paper, we study the problem of joint offloading and computational optimization in wireless mobile edge computing systems. The paper considers a wirelessly powered multi-user MEC system consisting of multiple antenna access points (APs) and multiple users, where the APs (integrated MEC servers) transmit energy via radio waves to charge multiple users, and each user node relies on the collected energy to perform latency-sensitive computational tasks. Through the MEC, these users can perform their respective tasks locally by themselves or offload all or part of them to the AP according to the time division multiple access (TDMA) protocol.In this case, this study optimizes the MEC-WPT system by jointly optimizing the transmitted energy beamformer of the AP, the central processing unit (CPU) frequency and offload bits of each user, and the time allocation between different users design to pursue energy efficiency. Specifically, this study minimizes the energy consumption of the access point in a given time block under the computational delay and energy harvesting constraints for each user. By transforming this problem into a convex framework and using the Lagrangian dual method, an optimal solution in semi-closed form is obtained in this paper. Numerical results show that the proposed joint design outperforms other benchmark solutions in terms of achieving energy efficiency.
 
 
 
@@ -98,5 +98,5 @@ This article presents a fast adaptive task offloading method based on meta-reinf
 
 ## 010 Meta Reinforcement Learning for Multi-task Offloading in Vehicular Edge Computing
 
-This paper investigates the problem of multitask offloading in vehicular edge computing. Due to the highly dynamic nature of the vehicle environment and the heterogeneous characteristics of vehicle services, traditional expert-based or learning-based strategies require updating manual parameters or retraining learning models, which leads to intolerable overhead. Therefore, in this paper, a Seq2seq-based meta-reinforcement learning algorithm is proposed for solving the multitask offloading problem. Specifically, a bidirectional gated cyclic unit integrated attention mechanism is designed to determine unloading actions by encoding sequential unloading actions and displaying different preferences for input sequences. In particular, a meta-reinforcement learning framework is designed based on a model agnostic meta-learning framework that trains meta-strategies offline and quickly adapts to new multitask offloading scenarios within a few training steps. Finally, we perform a performance evaluation based on the task generator DAGGEN and real vehicle trajectories, and the results show that SMRL-MTO reduces the task execution time by 11.36% on average compared to the greedy algorithm.
+This paper investigates the problem of multitask offloading in vehicular edge computing. Due to the highly dynamic nature of the vehicle environment and the heterogeneous characteristics of vehicle services, traditional expert-based or learning-based strategies require updating manual parameters or retraining learning models, which leads to intolerable overhead. Therefore, in this paper, a Seq2seq-based meta-reinforcement learning algorithm is proposed for solving the multitask offloading problem. Specifically, a bidirectional gated cyclic unit integrated attention mechanism is designed to determine unloading actions by encoding sequential unloading actions and displaying different preferences for input sequences. In particular, a meta-reinforcement learning framework is designed based on a model agnostic meta-learning framework that trains meta-strategies offline and quickly adapts to new multitask offloading scenarios within a few training steps. Finally, this paper evaluates the performance based on the task generator DAGGEN and real vehicle trajectories, and the results show that SMRL-MTO reduces the task execution time by 11.36% on average compared to the greedy algorithm.
 
