--- a/blog/读书笔记/V202306.md
+++ b/blog/读书笔记/V202306.md
@@ -46,7 +46,7 @@ This is a research paper on game and contract theory based power transaction man
 
 ## 004  Joint Offloading and Computing Optimization in Wireless Powered Mobile-Edge Computing Systems
 
-In this paper, we study the problem of joint offloading and computational optimization in wireless mobile edge computing systems. The paper considers a wirelessly powered multi-user MEC system consisting of multiple antenna access points (APs) and multiple users, where the APs (integrated MEC servers) transmit energy via radio waves to charge multiple users, and each user node relies on the collected energy to perform latency-sensitive computational tasks. Through the MEC, these users can perform their respective tasks locally by themselves or offload all or part of them to the AP according to the time division multiple access (TDMA) protocol.In this case, this study optimizes the MEC-WPT system by jointly optimizing the transmitted energy beamformer of the AP, the central processing unit (CPU) frequency and offload bits of each user, and the time allocation between different users design to pursue energy efficiency. Specifically, this study minimizes the energy consumption of the access point in a given time block under the computational delay and energy harvesting constraints for each user. By transforming this problem into a convex framework and using the Lagrangian dual method, an optimal solution in semi-closed form is obtained in this paper. Numerical results show that the proposed joint design outperforms other benchmark solutions in terms of achieving energy efficiency.
+In this paper, the study the problem of joint offloading and computational optimization in wireless mobile edge computing systems. The paper considers a wirelessly powered multi-user MEC system consisting of multiple antenna access points (APs) and multiple users, where the APs (integrated MEC servers) transmit energy via radio waves to charge multiple users, and each user node relies on the collected energy to perform latency-sensitive computational tasks. Through the MEC, these users can perform their respective tasks locally by themselves or offload all or part of them to the AP according to the time division multiple access (TDMA) protocol.In this case, this study optimizes the MEC-WPT system by jointly optimizing the transmitted energy beamformer of the AP, the central processing unit (CPU) frequency and offload bits of each user, and the time allocation between different users design to pursue energy efficiency. Specifically, this study minimizes the energy consumption of the access point in a given time block under the computational delay and energy harvesting constraints for each user. By transforming this problem into a convex framework and using the Lagrangian dual method, an optimal solution in semi-closed form is obtained in this paper. Numerical results show that the proposed joint design outperforms other benchmark solutions in terms of achieving energy efficiency.
 
 
 
