--- a/blog/读书笔记/V202307.md
+++ b/blog/读书笔记/V202307.md
@@ -2,7 +2,7 @@
 slug: IoV202307
 title: 车联网相关论文笔记（2023年7月）
 authors: [PangLuo]
-# tags: [Edge Computing, Offloading, Vehicles]
+tags: [Edge Computing, Offloading, Vehicles]
 ---
 
 
@@ -25,8 +25,24 @@ This article is a study on OFDMA-based collaborative mobile edge computing (C-ME
 This article focuses on an FPGA-based edge computing model that takes advantage of the customizability of FPGAs and the low latency of edge computing to accelerate the response time and save energy of mobile interactive applications. The article selects three typical computer vision applications as case studies, namely, handwritten digit recognition, object recognition, and face detection. The article experimentally compares the performance of four schemes: FPGA edge offload, CPU edge offload, CPU cloud offload, and mobile local processing, and the results show that FPGA edge offload outperforms the other schemes in terms of response time, execution time, and energy consumption. The article also explores data parallel processing methods between mobile and edge nodes to further reduce the response time of batch requests. The article concludes with a discussion of the advantages, limitations, and future research directions of the FPGA edge computing model.
 
 
+# 第二周
+## 003  Joint Task Offloading and Cache Placement for Energy-Efficient Mobile Edge Computing Systems
 
 
+This article is about joint task cache placement and offloading design for cache-enabled multi-user Mobile Edge Computing (MEC) systems. The goal of the article is to minimize the total system-weighted energy consumption in the task caching and task arrival/execution phases, taking into account the constraints of cache capacity, task causality, and task completion deadline. The article first solves the optimal offline solution of the problem using the branch-and-bound (BnB) method, and then proposes two low-complexity schemes based on task popularity and convex relaxation. The article demonstrates the advantages of the proposed schemes over existing benchmark schemes through numerical results.
+
+## 004 Energy-Efficient Computation Offloading in Mobile Edge Computing Systems With Uncertainties
+
+This article is about the problem of energy-efficient computational offloading in mobile edge computing systems. The article proposes a new approach to this problem that relaxes the strong assumptions on radio channel and network queue sizes made in existing research and takes into account the uncertainty inherent in the network. The article uses extreme value theory to limit the probability of occurrence of uncertain events and develops a column generation-based ε-bounded approximation algorithm to solve the posed problem. The algorithm is effective in finding a feasible solution that is less than (1 + ε) times the optimal solution. The article also implements the proposed scheme on an Android smartphone and conducts extensive experiments using real-world applications. The experimental results confirm that the energy consumption of the client device can be reduced by taking into account the inherent uncertainty in the computational offloading process. The proposed computational offloading scheme also significantly outperforms other schemes in terms of energy savings.
 
 
+# 第三周
+## 005 Joint power control and computation offloading for mobile edge networks
+
+This article investigates how to minimize the energy consumption of mobile devices by offloading computationally intensive tasks to MEC servers, taking into account co-channel interference and task latency requirements. The article presents an analytical model to decouple power control and computational resource allocation and shows that the joint optimization problem is invex and can be solved by a CCP-based algorithm. The article also proves that the joint power and CPU cycle allocation problem is a type I invex problem, which guarantees that each KKT stabilization point of the problem is a global minimum. The article also provides an offloading decision criterion for optimal energy efficiency computation based on the partial derivatives of the total energy consumption of the mobile device.The article models the communication channel as block fading and the computational task as a tuple of input data size, required CPU cycles, and maximum latency. The article defines the transmission power, rate, latency, and energy consumption of each offloaded mobile device, as well as the local execution power, latency, and energy consumption. The article also introduces offloading decision variables to indicate whether a mobile device chooses to offload its task or not.The article proves that the total transmission energy consumption function is a concave function monotonically increasing with respect to each power configuration component. The article also derives a set of linear equations to represent the relationship between transmission power and computational resources, where the coefficient matrix is an inverse positive M matrix that depends on the CPU cycle allocation.
+
+
+## 006 Joint Offloading and Resource Allocation Using Deep Reinforcement Learning in Mobile Edge Computing
+
+This article investigates the problem of partial task offloading and resource allocation in Mobile Edge Computing (MEC). The article proposes a Deep Reinforcement Learning (DRL)-based Energy Efficiency Algorithm (EEDRL) that decomposes the original non-convex optimization problem into two sub-problems, i.e., offloading ratio selection and resource allocation.The EEDRL employs an actor-critic network architecture, where the actor network learns the optimal mapping from the time-varying wireless channel to offloading ratios, and the critic network utilizes an advanced convex optimization algorithm to solve the the resource allocation subproblem.EEDRL devises an annealed Gaussian noise addition method for exploring more satisfactory offloading ratios in actor networks and explores different exploration strategies and verifies the generalization of the method. Numerical experiments are conducted to compare the method with various existing offloading schemes, and the results show that EEDRL is able to save up to 57.6% of energy consumption relative to binary offloading and achieves significant computation time speedups relative to the SQP algorithm. It is also shown that jointly optimizing the energy consumption of SMDs and MEC servers by choosing appropriate weighting factors for the MEC servers can reduce up to half of the total energy consumption, relative to a greedy strategy that only considers the energy reduction of SMDs.
 
