--- a/blog/读书笔记/V202305.md
+++ b/blog/读书笔记/V202305.md
@@ -2,7 +2,7 @@
 slug: IoV202305
 title: 车联网相关论文笔记（2023年5月）
 authors: [PangLuo]
-# tags: [Edge Computing, Offloading, Vehicles]
+tags: [Edge Computing, Offloading, Vehicles]
 ---
 
 
