--- a/blog/Technology/V202307.md
+++ b/blog/Technology/V202307.md
@@ -2,7 +2,7 @@
 slug: Technology20230729
 title: 解决NVIDIA 30/40系列显卡与tensorflow 1.15 不兼容的问题
 authors: [PangLuo]
-tags: [Edge Computing, Offloading, Vehicles]
+tags: [tensorflow, NVIDIA, RTX4090, RTX3090, AI]
 ---
 
 
