--- a/blog/Notebook/V202306.md
+++ b/blog/Notebook/V202306.md
@@ -1,8 +1,9 @@
 ---
 slug: IoV202306
-title: 车联网相关论文笔记（2023年6月）
+title: 边缘计算相关论文笔记（2023年6月）
 authors: [PangLuo]
 tags: [Edge Computing, Offloading, Vehicles]
+date: 2023-06-30
 ---
 
 
