--- a/blog/Notebook/V202307.md
+++ b/blog/Notebook/V202307.md
@@ -1,8 +1,9 @@
 ---
 slug: IoV202307
-title: 车联网相关论文笔记（2023年7月）
+title: 边缘计算相关论文笔记（2023年7月）
 authors: [PangLuo]
 tags: [Edge Computing, Offloading, Vehicles]
+date: 2023-07-31
 ---
 
 
@@ -46,3 +47,12 @@ This article investigates how to minimize the energy consumption of mobile devic
 
 This article investigates the problem of partial task offloading and resource allocation in Mobile Edge Computing (MEC). The article proposes a Deep Reinforcement Learning (DRL)-based Energy Efficiency Algorithm (EEDRL) that decomposes the original non-convex optimization problem into two sub-problems, i.e., offloading ratio selection and resource allocation.The EEDRL employs an actor-critic network architecture, where the actor network learns the optimal mapping from the time-varying wireless channel to offloading ratios, and the critic network utilizes an advanced convex optimization algorithm to solve the the resource allocation subproblem.EEDRL devises an annealed Gaussian noise addition method for exploring more satisfactory offloading ratios in actor networks and explores different exploration strategies and verifies the generalization of the method. Numerical experiments are conducted to compare the method with various existing offloading schemes, and the results show that EEDRL is able to save up to 57.6% of energy consumption relative to binary offloading and achieves significant computation time speedups relative to the SQP algorithm. It is also shown that jointly optimizing the energy consumption of SMDs and MEC servers by choosing appropriate weighting factors for the MEC servers can reduce up to half of the total energy consumption, relative to a greedy strategy that only considers the energy reduction of SMDs.
 
+
+# 第四周
+
+## 007  Energy-Efficient Resource Management in UAV-Assisted Mobile Edge Computing
+This paper investigates the energy efficiency optimization problem in UAV-assisted mobile edge computing systems with the goal of minimizing the energy consumption of mobile devices and UAVs. The paper considers factors such as UAV trajectory optimization, communication and computational resource allocation, and task offloading, and presents a non-convex optimization problem. To solve this problem, this paper introduces an algorithm based on block-by-block upper bound minimization (BSUM), which successively minimizes a tight upper bound of the objective function and updates the variables step by step. In this paper, we demonstrate the effectiveness of the proposed algorithm through numerical simulation results, which can significantly reduce the total energy consumption of the network compared to other benchmark algorithms.
+
+## 008  Energy-Efficient Task Offloading and Resource Allocation via Deep Reinforcement Learning for Augmented Reality in Mobile Edge Networks
+
+This paper investigates the use of deep reinforcement learning in mobile edge networks for energy efficient task offloading and resource allocation optimization for augmented reality applications. The study builds a more specific and detailed model of an augmented reality application by dividing an application into five subtasks and considering the dependencies and latency requirements between the subtasks. In order to solve the hybrid problem of multi-user competition and cooperation and simultaneously satisfy the energy minimization and quality of service guarantee for each user, a multi-intelligent deep deterministic policy gradient (MADDPG) algorithm is proposed. The effectiveness and superiority of the proposed algorithm in single-edge server and multi-edge server systems are verified through simulation experiments.
