--- a/blog/Notebook/V202305.md
+++ b/blog/Notebook/V202305.md
@@ -1,8 +1,9 @@
 ---
 slug: IoV202305
-title: 车联网相关论文笔记（2023年5月）
+title: 边缘计算相关论文笔记（2023年5月）
 authors: [PangLuo]
 tags: [Edge Computing, Offloading, Vehicles]
+date: 2023-05-31
 ---
 
 
