--- a/blog/Technology/V202307.md
+++ b/blog/Technology/V202307.md
@@ -179,7 +179,7 @@ GitHub地址为：https://github.com/NVIDIA/tensorflow
 挺好，不用重写代码了。
 
 :::info 说明
-我知道有机器采集网站文章，所以已经先在公众号上先发了。
+我知道有机器采集网站文章，所以已经在公众号上先发了。
 
 ![image-20230729093126683](https://img.up.cdn.nahida.cn/typora/20230729/wechat.png!blog.luomoe.com.20230729)
 :::
